@@ -35,7 +35,10 @@
 * Fixed background persistence of categorizer state (See {ml-pull}1137[#1137],
   issue: {ml-issue}1136[#1136].)
 * Fix classification job failures when number of classes in configuration differs from 
-the number of classes present in the training data. (See {ml-pull}1144[#1144].)
+  the number of classes present in the training data. (See {ml-pull}1144[#1144].)
+* Fix "autodetect process stopped unexpectedly: Fatal error: 'terminate called after
+  throwing an instance of 'std::bad_function_call'". (See {ml-pull}1246[#1246],
+  issue: {ml-issue}1245[#1245].)
 
 == {es} version 7.7.0
 
